fixed contact form label alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3406,4 +3406,6 @@ input, select, textarea {
 
 
 
-	
+	#contact p{
+		text-align: left;
+	}
